@@ -1,4 +1,10 @@
 0.7.1: BETA
+     - migrated backend code into modules (FS, AFS, GFS backend modules)
+     - added SMB/CIFS backend module for access to ADS integrated Windows/Samba shares
+     - added example DBB backend module (database backend)
+     - fixed last AFS performance bugs 
+     - Web interface:
+           - improved display of byte sizes (flexible unit change)
 
 0.7.0: 2011/29/04
      - fixed major search bug (SEARCH; thx jfotop@ath.forthnet.gr)
